--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
     "moment": "^2.26.0",
+    "pg": "^8.4.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "typeorm": "^0.2.28"
   },
   "devDependencies": {
     "@types/jest": "^24.0.6",
