--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -3,7 +3,7 @@ parser: '@typescript-eslint/parser'
 parserOptions:
   ecmaVersion: 2018
   sourceType: 'module'
-  project: './tsconfig.json'
+  # project: './tsconfig.json'
 
 extends:
   - 'react-app'
