--- a/mock-server/package.json
+++ b/mock-server/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "mock-server",
+  "name": "user",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node src"
+    "start": "ts-node src/app.ts"
   },
-  "author": "Benjamin Brown",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "faker": "^4.1.0",
-    "serialize-javascript": "^2.1.1"
+  "devDependencies": {
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.3"
   },
-  "devDependencies": {}
+  "dependencies": {
+    "express": "^4.17.1",
+    "pg": "^8.4.1",
+    "typeorm": "^0.2.28"
+  }
 }
