--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@material-ui/core": "^4.10.1",
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
+    "clsx": "^1.1.1",
     "moment": "^2.26.0",
     "pg": "^8.4.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "reactstrap": "^8.7.0",
     "typeorm": "^0.2.28"
   },
   "devDependencies": {
