--- a/mock-server/package.json
+++ b/mock-server/package.json
@@ -14,6 +14,7 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
+    "@types/express": "^4.17.8",
     "express": "^4.17.1",
     "pg": "^8.4.1",
     "typeorm": "^0.2.28"
