--- a/mock-server/package.json
+++ b/mock-server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/app.ts"
+    "start": "ts-node -r tsconfig-paths/register src/app.ts"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.8",
     "express": "^4.17.1",
     "pg": "^8.4.1",
+    "tsconfig-paths": "^3.9.0",
     "typeorm": "^0.2.28"
   }
 }
