--- a/mock-server/package.json
+++ b/mock-server/package.json
@@ -16,8 +16,10 @@
   "dependencies": {
     "@types/express": "^4.17.8",
     "express": "^4.17.1",
+    "express-winston": "^4.0.5",
     "pg": "^8.4.1",
     "tsconfig-paths": "^3.9.0",
-    "typeorm": "^0.2.28"
+    "typeorm": "^0.2.28",
+    "winston": "^3.3.3"
   }
 }
