--- a/src/mock-server/tsconfig.json
+++ b/src/mock-server/tsconfig.json
@@ -1,16 +1,23 @@
 {
-  "compilerOptions": {
-    "baseUrl": "./src/",
-    "paths": {
-      "*": [
-        "*"
-      ]
-    },
-    "lib": ["es5", "es6", "dom"],
-    "target": "es5",
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true
-  },
+	"compilerOptions": {
+		"baseUrl": "./src/",
+		"paths": {
+			"*": [
+				"*"
+			]
+		},
+		"lib": [
+			"es5",
+			"es6",
+			"dom"
+		],
+		"target": "es5",
+		"module": "commonjs",
+		"moduleResolution": "node",
+		"emitDecoratorMetadata": true,
+		"experimentalDecorators": true
+	},
+	// "include": [
+	// 	"../types/"
+	// ]
 }
