--- a/src/mock-server/ormconfig.json
+++ b/src/mock-server/ormconfig.json
@@ -6,6 +6,6 @@
   "password": "password123",
   "database": "typeorm",
   "entities": ["src/entity/*.ts"],
-  "logging": false,
+  "logging": true,
   "synchronize": true
 }
