--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "start": "concurrently \"craco start\" \"(cd src/mock-server && yarn start)\"",
+    "start:ui": "craco start",
+    "start:server": "cd src/mock-server && yarn start",
     "build": "craco build",
     "test": "craco test"
   },
