--- a/src/mock-server/package.json
+++ b/src/mock-server/package.json
@@ -20,6 +20,7 @@
     "pg": "^8.4.1",
     "tsconfig-paths": "^3.9.0",
     "typeorm": "^0.2.28",
+    "uuid": "^8.3.1",
     "winston": "^3.3.3"
   }
 }
