--- a/src/server/package.json
+++ b/src/server/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "express-winston": "^4.0.5",
     "pg": "^8.4.1",
+    "socket.io": "^3.1.0",
     "tsconfig-paths": "^3.9.0",
     "typeorm": "^0.2.28",
     "uuid": "^8.3.1",
