--- a/src/server/package.json
+++ b/src/server/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.8",
     "express": "^4.17.1",
     "express-winston": "^4.0.5",
+    "http": "^0.0.1-security",
     "pg": "^8.4.1",
     "socket.io": "^3.1.0",
     "tsconfig-paths": "^3.9.0",
