--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.26.0",
     "pg": "^8.4.1",
     "react": "^16.12.0",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
