--- a/src/server/package.json
+++ b/src/server/package.json
@@ -15,7 +15,9 @@
   },
   "dependencies": {
     "@types/express": "^4.17.8",
+    "@types/express-fileupload": "^1.1.6",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "express-winston": "^4.0.5",
     "http": "^0.0.1-security",
     "pg": "^8.4.1",
