--- a/src/server/package.json
+++ b/src/server/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node -r tsconfig-paths/register src/app.ts"
+    "start": "ts-node-dev -r tsconfig-paths/register src/app.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "ts-node": "^9.0.0",
+    "ts-node-dev": "^1.1.6",
     "typescript": "^4.0.3"
   },
   "dependencies": {
