--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -1,17 +1,26 @@
 {
-  "compilerOptions": {
-    "baseUrl": "./src/",
-    "paths": {
-      "*": ["*"]
-    },
-    "lib": ["es5", "es6", "dom"],
-    "target": "es5",
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "resolveJsonModule": true,
-    "esModuleInterop": true,
-    "typeRoots": ["@types", "./node_modules/@types"]
-  }
+	"compilerOptions": {
+		"baseUrl": "./src/",
+		"paths": {
+			"*": [
+				"*"
+			],
+		},
+		"lib": [
+			"es5",
+			"es6",
+			"dom"
+		],
+		"target": "es5",
+		"module": "commonjs",
+		"moduleResolution": "node",
+		"emitDecoratorMetadata": true,
+		"experimentalDecorators": true,
+		"resolveJsonModule": true,
+		"esModuleInterop": true,
+		"typeRoots": [
+			"@types",
+			"./node_modules/@types"
+		],
+	}
 }
