--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "build": "craco build",
     "test": "craco test"
   },
+  "engines": {
+    "node": "12.x"
+  },
   "dependencies": {
     "@craco/craco": "^5.6.4",
     "@date-io/date-fns": "1.3.13",
