--- a/src/server/package.json
+++ b/src/server/package.json
@@ -23,6 +23,7 @@
     "http": "^0.0.1-security",
     "pg": "^8.4.1",
     "socket.io": "^3.1.0",
+    "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.9.0",
     "typeorm": "^0.2.28",
     "uuid": "^8.3.1",
