Adds configuration details

--- a/src/server/ormconfig.example.json
+++ b/src/server/ormconfig.example.json
@@ -2,8 +2,8 @@
   "type": "postgres",
   "host": "localhost",
   "port": 5432,
-  "username": "alex",
-  "password": "password123",
+  "username": "FILL_ME_IN",
+  "password": "FILL_ME_IN",
   "database": "typeorm",
   "entities": ["src/entity/*.ts"],
   "logging": true,
