--- a/src/server/package.json
+++ b/src/server/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "dotenv": "^10.0.0",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.0.3"
   },
